# SkyBoxAnalysis

./: .gitignore  README.md  index.html  skyboxlib.html
.github/workflows/: deploy-docs.yml  docs-full.yml  docs.yml  pages.yml  static.yml
docs/: index.html  search.js
docs/python/: index.html  search.js  skyboxdatapy.html
docs/python/skyboxdatapy/: io.html  postprocess.html  spec.html  utils.html
docs/python/skyboxlib/: io.html
env/: env_skybox.yml
julia/: Project.toml
julia/scripts/: run_example.jl
julia/src/: SkyBoxLib.jl
matlab/fss/: catenary_analysis.m
matlab/scripts/: run_example.m
python/: pyproject.toml
python/docs/: README.md
python/scripts/: example_analysis.py  plotPP.ipynb  plotPP_comp.ipynb  plotSpec.ipynb  plotWP.ipynb  plotWP_comp.ipynb  plotWP_spec.ipynb  readMAT.ipynb
python/scripts/convertFiles/: readCSV_writeMAT.ipynb  readXLSX_writeMAT_EMP.ipynb  readXLSX_writeMAT_MPL.ipynb  readXLSX_writeMAT_PLT.ipynb
python/scripts/peaks/: plotPP_peaks_focusing.ipynb  plotWP_peaks_focusing.ipynb  plotWP_peaks_regular.ipynb  read_peaks.ipynb
python/skyboxdatapy/: __init__.py  io.py  postprocess.py  spec.py  utils.py
python/skyboxlib/: __init__.py
